Fixed layout issue in services section. Added flex 1 to children containers.

--- a/app/css/scss/_structure.scss
+++ b/app/css/scss/_structure.scss
@@ -359,11 +359,11 @@ background-color: #005485;background-image:url('data:image/svg+xml;base64,PHN2Zy
 		display: -ms-flexbox;
 		display: flex;
 		flex-direction: column;
-		-ms-flex-positive: 2;
+		-ms-flex-positive: 1;
 		-ms-flex-negative: 0;
 		-ms-flex-preferred-size: 0px;
-		box-flex: 2;
-		flex: 2 0 0;
+		box-flex: 1;
+		flex: 1;
 		align-self: flex-start;
 		margin: 0 5% 0 0;
 
@@ -388,7 +388,7 @@ background-color: #005485;background-image:url('data:image/svg+xml;base64,PHN2Zy
 		-ms-flex-negative: 0;
 		-ms-flex-preferred-size: 0px;
 		box-flex: 1;
-		flex: 1 0 0;
+		flex: 1;
 	}
 	h1 {
 		font-size: calc-em(57px, $font-size-base);
